--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Ignore backend metadata 
+/.metadata/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Compiled class file
+*.class
 
-# testing
-/coverage
+# Package Files 
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-# production
-/build
+# Log file
+*.log
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# BlueJ files
+*.ctxt
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.dll
+# ignoring target files
+target/
+.temp*
+.classpath
+.project
+.settings
+target/
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Maven
+target/
+
+# Gradle
+build/
+
+# Ignore frontend node modules
+node_modules/
